# antID

./: .gitignore  CMakeLists.txt  README.md
antID/: CMakeLists.txt  README.md
antID/cmake/: FindSpinnaker.cmake
antID/examples/: edge_feature_tuning.cpp
antID/src/: collect_data.cpp  video_to_images.cpp
black_fly_tools/: CMakeLists.txt  README.md
black_fly_tools/include/: black_fly_lib.hpp
black_fly_tools/include/black_fly_tools/: black_fly_lib.hpp
black_fly_tools/src/: black_fly_lib.cpp  main.cpp  record.cpp  stream.cpp
python/: CNNClassifier.py  README.md  Transfer_YOLO.py  TripletNetwork.py  classifier.py  cluster.py  crop_to_head.py  dataset_std_mean.py  datasets.py  datset_stats.py  example.py  folder_format_data.py  format_dataset.py  format_dataset_passes.py  format_dataset_pt.py  k_fold_classifier.py  model_sum.py  networks.py  orb.py  plot_loss.py  test_model.py  tester.py  testing.py  train.py  trainer.py  triplet_data_format.py  vid_to_imgs.py  vid_to_single_pass.py
python/YOLO_Body/: ant_body_v8.yaml  train.py
python/YOLO_V8/: ant_head_v8.yaml  train.py  train_ant_face.ipynb
src/: main.cpp
